Revert "query node should only reach out to relevant index and cache nodes for data (#235)"
This reverts commit b16756da5d31ec9937450a50f8d0b8742e8d1038.