@@ -43,6 +43,7 @@ import io.micrometer.prometheus.PrometheusConfig;
 import io.micrometer.prometheus.PrometheusMeterRegistry;
 import java.nio.file.Path;
 import java.time.Duration;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -156,18 +157,12 @@ public class Kaldb {
 
     if (roles.contains(KaldbConfigs.NodeRole.QUERY)) {
       SearchMetadataStore searchMetadataStore = new SearchMetadataStore(metadataStore, true);
-      SnapshotMetadataStore snapshotMetadataStore = new SnapshotMetadataStore(metadataStore, true);
-      ServiceMetadataStore serviceMetadataStore = new ServiceMetadataStore(metadataStore, true);
       services.add(
           new MetadataStoreLifecycleManager(
-              KaldbConfigs.NodeRole.QUERY, List.of(searchMetadataStore, snapshotMetadataStore)));
+              KaldbConfigs.NodeRole.QUERY, Collections.singletonList(searchMetadataStore)));
 
       KaldbDistributedQueryService kaldbDistributedQueryService =
-          new KaldbDistributedQueryService(
-              searchMetadataStore,
-              snapshotMetadataStore,
-              serviceMetadataStore,
-              prometheusMeterRegistry);
+          new KaldbDistributedQueryService(searchMetadataStore, prometheusMeterRegistry);
       final int serverPort = kaldbConfig.getQueryConfig().getServerConfig().getServerPort();
       ArmeriaService armeriaService =
           new ArmeriaService.Builder(serverPort, "kalDbQuery", prometheusMeterRegistry)
